--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -62,7 +62,7 @@ jobs:
         uses: actions/upload-pages-artifact@v3
         with:
            name: 'github-pages'
-           path: build
+           path: out
       - name: Deploy artifacts
         uses: actions/deploy-pages@v4
         
