--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "mdx-app",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://hemantyogananda.github.io/mdx-app/",
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
