Testing homepage path

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "mdx-app",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://hemantyogananda.github.io/mdx-app/",
+  "homepage": "https://hemantyogananda.github.io/mdx-app",
   "scripts": {
     "dev": "next build && npm start",
     "build": "next build",
