--- a/package.json
+++ b/package.json
@@ -1,35 +1,28 @@
 {
-  "name": "next-mdx-blog",
+  "name": "my-project",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "@mdx-js/loader": "^3.1.0",
-    "@mdx-js/react": "^3.1.0",
-    "@next/mdx": "^15.1.2",
-    "@types/mdx": "^2.0.13",
-    "next": "15.1.2",
-    "next-themes": "^0.4.4",
-    "prismjs": "^1.29.0",
+    "next": "15.3.2",
+    "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@tailwindcss/typography": "^0.5.15",
+    "@tailwindcss/postcss": "^4.1.6",
     "@types/node": "^20",
-    "@types/prismjs": "^1.26.5",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
-    "eslint-config-next": "15.1.2",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "eslint-config-next": "15.3.2",
+    "tailwindcss": "^4.1.6",
     "typescript": "^5"
   }
 }
