Testing tailwind path

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-project",
+  "name": "mdx-app",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://hemantyogananda.github.io/mdx-app/",
